--- a/grocery-booking-api/src/main/resources/application.properties
+++ b/grocery-booking-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=grocery-booking-api
-spring.datasource.url = jdbc:mysql://localhost:3306/qp_grocery_booking
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=none
